# dsa

./: README.md
epi/epi_py/: .readthedocs.yaml  README.md  mypy.ini  notes.md  pyproject.toml  shell.nix
epi/epi_py/docs/: conf.py  index.rst
epi/epi_py/src/: utils.py
epi/epi_py/src/ch10_heaps/: e01_merge_sorted_files.py  heap_examples.py
epi/epi_py/src/ch11_search/: e01_search_first.py
epi/epi_py/src/ch12_hash_tables/: e01_palindromic_permutations.py  e03_isbn_lru_cache.py
epi/epi_py/src/ch13_sorting/: e01_sorted_intersection.py  e02_merge_sorted.py
epi/epi_py/src/ch4_primitive_types/: bits.py  e01_parity_of_word.py  e02_swap_bits.py  e03_reverse_bits.py  e04_closest_integer_weight.py  e05_mult_no_arith.py  example.py
epi/epi_py/src/ch5_arrays/: e01_dutch_flag_problem.py  e02_increment_arb_precision.py  e03_mult_arb_precision.py  e04_advance_array.py  e05_deleted_sorted_duplicates.py  e06_trade_stock_once.py  examples.py
epi/epi_py/src/ch6_strings/: e01_str_to_int.py
epi/epi_py/src/ch7_lists/: e01_merged_sorted.py  e02_reverse_sublist.py  e03_check_cycles.py  e04_check_overlapping.py  e06_delete_node.py  e06_remove_kth.py  e10_even_odd_merge.py  e11_singly_palindromic.py  list_utils.py
epi/epi_py/src/ch8_stacks_queues/: e01_stack_w_max.py  e02_reverse_polish.py  e06_tree_depth.py
epi/epi_py/src/ch9_binary_trees/: e01_check_balanced_height.py  e02_is_symmetric.py  e03_lowest_common_ancestor.py  tree_utils.py
epi/py/: pyproject.toml  shell.nix
epi/py/docs/: conf.py  index.rst
epi/py/src/ch4_primitive_types/: exercises.py
(+7 files in other folders)
